--- a/pago.css
+++ b/pago.css
@@ -44,7 +44,7 @@ body {
     border-radius: 10px;
     padding: 20px;
     box-sizing: border-box;
-    background-image: url('.../fondotargeta.png');
+    background-image: url('fondotargeta.png');
     background-size: cover;
     background-position: center;
     color: white;
