--- a/style2.css
+++ b/style2.css
@@ -23,6 +23,22 @@ header h1 {
     margin-bottom: 10px;
 }
 
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
 main {
     padding: 20px;
     background-color: #fff;
